--- a/template/user/login.html
+++ b/template/user/login.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Login</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
 </head>
 <body>
-	<form action="{{form.action}}" method="post">
-		{% csrf_token %}
-		{{form}}
-		<input type="submit">
-	</form>
+    {% if request.user.is_authenticated%}
+        <p>You Are Currently Logined <a href="/">Home</a></p>
+    {% else %}
+        <form action="{{form.action}}" method="post">
+            {% csrf_token %}
+            {{form}}
+            <input type="submit" value="sumbit">
+        </form>
+    {% endif %}
+
+
+
 </body>
 </html>
