--- a/template/user/profile_update.html
+++ b/template/user/profile_update.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Profile update</title>
+    <meta charset="UTF-8">
+    <title>Profile Update</title>
 </head>
 <body>
-	<form action="{{form.action}}" method="post">
-		{% csrf_token %}
-		{{form}}
-		<input type="submit">
-	</form>
+<form action="{{form.action}}" method="post">
+    {% csrf_token %}
+    {{form}}
+    <input type="submit" value="sumbit">
+</form>
 </body>
 </html>
